k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uamichat-server
  namespace: uamichat
spec:
  selector:
    app: uamichat-server
  ports:
  - port: 80
    targetPort: 8765
