k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uamichat
  namespace: uamichat
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
spec:
  rules:
  - host: chat.maharjannirwan.com.np
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uamichat-server
            port:
              number: 80
